--- a/app/src/main/res/layout/activity_message_comment_details.xml
+++ b/app/src/main/res/layout/activity_message_comment_details.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/page_bg"
         android:orientation="vertical">
 
         <ScrollView
@@ -26,11 +27,12 @@
                     android:paddingTop="20dp"
                     android:textColor="@color/text_black_cd"
                     android:textSize="17sp"
+                    android:visibility="gone"
                     tools:text="@string/hot_comments" />
 
                 <include
                     android:id="@+id/replayCommentLayout"
-                    layout="@layout/item_message_commen" />
+                    layout="@layout/layout_message_commen" />
 
 
             </LinearLayout>
@@ -39,7 +41,9 @@
 
         <View style="@style/style_split_line" />
 
-        <include layout="@layout/layout_to_comment_bottom" />
+        <include
+            android:id="@+id/bottomLayout"
+            layout="@layout/layout_to_comment_bottom" />
 
     </LinearLayout>
 </layout>
