--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -76,13 +76,13 @@
                         android:src="@drawable/comments" />
 
                     <TextView
-                        android:layout_marginRight="5dp"
-                        android:gravity="center"
                         android:id="@+id/tv_comment_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
+                        android:layout_marginRight="5dp"
                         android:background="#fbfbfb"
+                        android:gravity="center"
                         android:textColor="#ff4747"
                         android:textSize="12sp"
                         tools:text="9" />
@@ -96,6 +96,7 @@
                     android:layout_weight="1" />
 
                 <ImageView
+                    android:id="@+id/img_collection"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/callection_un" />
