--- a/app/src/main/res/layout/item_message_reply_commen.xml
+++ b/app/src/main/res/layout/item_message_reply_commen.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/layout_right_interval">
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -17,6 +18,7 @@
         tools:text="哈哈哈哈哈哈" />
 
     <TextView
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
