--- a/app/src/main/res/layout/layout_to_comment_bottom.xml
+++ b/app/src/main/res/layout/layout_to_comment_bottom.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/lin_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/layout_left_interval"
-        android:layout_marginRight="@dimen/layout_right_interval"
+        android:paddingLeft="@dimen/layout_left_interval"
+        android:background="@color/white"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         tools:showIn="@layout/activity_message_comment_details">
