--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:background="@color/white"
+        android:background="@color/page_bg"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="90dp">
