--- a/app/src/main/res/layout/item_user_my_comments.xml
+++ b/app/src/main/res/layout/item_user_my_comments.xml
@@ -2,12 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        android:id="@+id/lin_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:padding="15dp">
 
         <ImageView
+            android:id="@+id/img_logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/photo_default" />
@@ -25,6 +28,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -35,6 +39,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -47,6 +52,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_replay_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
@@ -57,6 +63,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -67,6 +74,7 @@
                 android:textSize="16sp" />
 
             <LinearLayout
+                android:id="@+id/lin_msg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -74,11 +82,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/img_msg"
                     android:layout_width="95dp"
                     android:layout_height="65dp"
                     android:src="@drawable/default_pic" />
 
                 <TextView
+                    android:id="@+id/tv_msg_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
