--- a/app/src/main/res/layout/item_coin_bbs.xml
+++ b/app/src/main/res/layout/item_coin_bbs.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lin_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:orientation="vertical"
     android:padding="15dp">
 
@@ -19,6 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_top"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginRight="10dp"
@@ -26,25 +28,27 @@
                 android:visibility="gone" />
 
             <TextView
+                android:id="@+id/tv_bbs_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfdsfesdf"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp" />
+                android:textSize="17sp"
+                tools:text="sdfsdfdsfesdf" />
 
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_state"
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
-            android:background="@drawable/to_bbs_bg"
-            android:text="@string/focus_on_done"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:background="@drawable/to_bbs_bg"
+            tools:text="@string/focus_on_done" />
 
 
     </LinearLayout>
@@ -57,31 +61,52 @@
         android:weightSum="3">
 
         <TextView
+            android:id="@+id/tv_focus_on"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="sdfsdfsdfsfs"
             android:textColor="@color/app_text_gray"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:text="sdfsdfsdfsfs" />
 
         <TextView
+            android:id="@+id/tv_post_num"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="sdfsdfsdfsfs"
             android:textColor="@color/app_text_gray"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:text="sdfsdfsdfsfs" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="sdfsdfsdfsfs"
-            android:textColor="@color/app_text_gray"
-            android:textSize="15sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="今日更贴:"
+                android:textColor="@color/app_text_gray"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_today_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:singleLine="true"
+                android:textColor="@color/market_red"
+                android:textSize="15sp"
+                tools:text="22万" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
