--- a/app/src/main/res/layout/activity_plate_details.xml
+++ b/app/src/main/res/layout/activity_plate_details.xml
@@ -2,216 +2,234 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
-        android:weightSum="3">
+        android:background="@color/white">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/text_color_3A3A3A"
-            android:textSize="17sp"
-            tools:text="sdfsf" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="15dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:weightSum="3">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="2"
-                android:orientation="vertical">
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/text_color_3A3A3A"
+                android:textSize="17sp"
+                tools:text="sdfsf" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="15dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
+                    android:layout_weight="4"
+                    android:orientation="vertical">
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="最佳"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/tv_best_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp"
+                            tools:text="dfdfdf" />
+
+                        <TextView
+                            android:id="@+id/tv_best_change"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp"
+                            tools:text="dfdfdf" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal">
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="最差"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/tv_worst_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp"
+                            tools:text="dfdfdf" />
+
+                        <TextView
+                            android:id="@+id/tv_worst_change"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textColor="@color/text_gray_8181881"
+                            android:textSize="14sp"
+                            tools:text="dfdfdf" />
+
+
+                    </LinearLayout>
 
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="2.5"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_acg_change"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="dfdfdf"
                         android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
+                        android:textSize="25sp"
+                        tools:text="dfdfdf" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:text="dfdfdf"
-                        android:textColor="@color/text_gray_8181881"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:text="dfdfdf"
+                        android:text="平均涨跌幅"
                         android:textColor="@color/text_gray_8181881"
                         android:textSize="14sp" />
 
 
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_weight="2.5"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
 
                 <TextView
+                    android:id="@+id/tv_up_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dfdfdf"
                     android:textColor="@color/text_gray_8181881"
-                    android:textSize="25sp" />
+                    android:textSize="14sp"
+                    tools:text="上涨币种--" />
 
                 <TextView
+                    android:id="@+id/tv_down_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="平均涨跌幅"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/text_gray_8181881"
+                    android:textSize="14sp"
+                    tools:text="下跌币种--" />
+
+                <TextView
+                    android:id="@+id/tv_total_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="币种数量"
                     android:textColor="@color/text_gray_8181881"
                     android:textSize="14sp" />
 
 
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@color/gray_bg"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingRight="15dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:text="货币/成交额度(24h)"
-                android:textColor="@color/text_gray_8181881"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="44dp"
-                android:text="最新价"
-                android:textColor="@color/text_gray_8181881"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginLeft="15dp"
-                android:text="涨跌幅"
-                android:textColor="@color/text_gray_8181881"
-                android:textSize="14sp" />
-
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:descendantFocusability="blocksDescendants"
-            >
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_all"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@color/gray_bg"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingRight="15dp"
+                android:paddingTop="10dp">
 
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:text="货币/成交额度(24h)"
+                    android:textColor="@color/text_gray_8181881"
+                    android:textSize="14sp" />
 
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:text="最新价"
+                    android:textColor="@color/text_gray_8181881"
+                    android:textSize="14sp" />
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="15dp"
+                    android:text="涨跌幅"
+                    android:textColor="@color/text_gray_8181881"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:descendantFocusability="blocksDescendants">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_all"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 </layout>
