--- a/app/src/main/res/layout/fragment_plate.xml
+++ b/app/src/main/res/layout/fragment_plate.xml
@@ -98,6 +98,8 @@
                         android:id="@+id/lin_recycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginRight="25dp"
                         android:descendantFocusability="blocksDescendants">
 
                         <android.support.v7.widget.RecyclerView
@@ -108,6 +110,13 @@
                         </android.support.v7.widget.RecyclerView>
 
                     </RelativeLayout>
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray_bg" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -141,13 +150,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
-                            android:layout_marginRight="44dp"
+                            android:layout_marginRight="15dp"
                             android:text="最佳/最差"
                             android:textColor="@color/text_gray_8181881"
                             android:textSize="14sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:gravity="right"
+                            android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:layout_marginLeft="15dp"
