--- a/app/src/main/res/layout/item_plate_details.xml
+++ b/app/src/main/res/layout/item_plate_details.xml
@@ -27,16 +27,32 @@
             android:background="@drawable/market_list_warn"
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/tv_name"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:textColor="@color/text_color_3A3A3A"
-            android:textSize="15sp"
-            tools:text="dfdf" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/text_color_3A3A3A"
+                android:textSize="15sp"
+                tools:text="dfdf" />
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/text_color_3A3A3A"
+                android:textSize="12sp"
+                tools:text="dfdf" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -54,51 +70,22 @@
             android:gravity="right"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:textColor="@color/text_black_cd"
+                android:textSize="15sp"
+                tools:text="sdfsdfsd" />
 
-                <TextView
-                    android:id="@+id/tv_best_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_black_cd"
-                    android:textSize="14sp"
-                    tools:text="sdfsdfsd" />
 
-                <TextView
-                    android:id="@+id/tv_best_change"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_black_cd"
-                    android:textSize="14sp"
-                    tools:text="sdfsdfsd" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_other_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_worst_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_black_cd"
-                    android:textSize="14sp"
-                    tools:text="sdfsdfsd" />
-
-                <TextView
-                    android:id="@+id/tv_worst_change"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_black_cd"
-                    android:textSize="14sp"
-                    tools:text="sdfsdfsd" />
-
-            </LinearLayout>
+                android:textColor="@color/text_black_cd"
+                android:textSize="12sp"
+                tools:text="sdfsdfsd" />
 
         </LinearLayout>
 
